# ndap_data_validator

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  start_service.sh
.github/workflows/: deploy.sh  deploy.yaml  install.sh
static/: style.css
templates/: admin_logs.html  admin_settings.html  admin_users.html  airflow.html  airflow_trigger.html  base.html  load_type.html  login.html  password_reset.html  preview.html  result.html  s3_upload.html  upload.html  user_logs.html  validate.html
utils/: __init__.py  db.py  s3_uploader.py  validation.py  validation_rules.json
