[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ndap-validation-app"
version = "0.1.0"
description = "CSV validation and S3 uploader (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas==2.2.2",
  "fastapi==0.115.6",
  "uvicorn==0.22.0",
  "anyio==3.7.1",
  "h11==0.14.0",
  "click==8.1.7",
  "jinja2==3.1.6",
  "python-multipart==0.0.17",
  "boto3==1.34.145",
  "numpy==1.26.4",
  "duckdb==1.0.0",
  "passlib[bcrypt]==1.7.4",
  "itsdangerous==2.2.0",
]

[project.urls]
Homepage = ""

[tool.uv]
package = false
